# dvc-demo

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  metrics.json  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yaml
dvc_demo/: evaluate.py  process.py  train.py  utils.py
models/: model.pkl
