[tool.poetry]
name = "dvc-demo"
version = "0.1.0"
description = ""
authors = ["gregggilbert <gregg.gilbert@ivadolabs.com>"]
readme = "README.md"
packages = [{include = "dvc_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.3"
fire = "^0.4.0"
dvc = {extras = ["s3"], version = "^2.35.2"}
pandas = "^1.5.2"
pre-commit = "^2.20.0"
gto = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
